// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar Snapshots tests should fill all progress bar and match view snapshot 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="150"
    class="container size-8"
    role="progressbar"
  >
    <div
      class="filled negative"
      style="transform: translateX(0%);"
    />
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match snapshot 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="container size-8"
    role="progressbar"
  >
    <div
      class="filled positive"
      style="transform: translateX(-80%);"
    />
  </div>
</div>
`;

exports[`ProgressBar Snapshots tests should match with view snapshot 1`] = `
<div>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="20"
    class="container size-8"
    role="progressbar"
  >
    <div
      class="filled negative"
      style="transform: translateX(-80%);"
    />
  </div>
</div>
`;
